# octopuzzler

./: README.md  app.js  avatar-system.js  avatar.glb  index.html  main.js  playback-worklet.js  style.css
code/backend/: docker-compose.yml  requirements.txt  rtc_gateway.py
code/backend/models/: session_state.py  user_database.py
code/backend/services/:  emotion_fusion_service.py  Dockerfile.animation_sync  Dockerfile.emotion_fusion  Dockerfile.model_manager  animation_sync_service.py  dia2_service.py  emovit_service.py  face_recognition_service.py  model_manager.py  phoneme_mapping.py  qwen3_vl_service.py  sensevoice_service.py
code/backend/tools/: user_management.py
code/device/: CMakeLists.txt  build.sh  config.h  flash.sh
code/device/avatar/: avatar_example.cpp  dual_mode_eyes.cpp  dual_mode_eyes.h  dual_mode_eyes_example.cpp  eye_tracking_example.cpp  eye_tracking_optimized.h  eyes.cpp  gaze_calculator.cpp  gaze_calculator.h  mouth_shapes.cpp  mouth_shapes.h  octopus_avatar.cpp  octopus_avatar.h
code/device/main/: avatar_app.cpp
code/device/session/: accelerometer.cpp  session_manager.cpp  wake_word_detector.cpp  wake_word_detector.h
code/device/tracking/: blazeface_detector.cpp  blazeface_detector.h  camera_task.cpp  eye_tracking_optimized.cpp  gaze_filter.cpp  mediapipe_facemesh.cpp
docs/: OCTOPUS_AI_ARCHITECTURE_V1.0.md
new/: ARCHITECTURE.md  BK7258_FIRMWARE.md  readme.md
new/docs/: 00_OVERVIEW.md
new/docs/ANIMATION/: AVATAR_DESIGN.md  EMOTION_ANIMATION.md  EYE_TRACKING.md  PHONEME_MAPPING.md  SYNC_SERVICE.md
new/docs/AUDIO/: AUDIO_PROCESSING.md  EMOTION_RECOGNITION.md  SENSEVOICE_UNIFIED.md
new/docs/BACKEND/: ARCHITECTURE.md  LLM_INTEGRATION.md  STT_PIPELINE.md  TTS_SYNTHESIS.md
new/docs/DEVELOPMENT/: DEBUGGING.md  QUICK_START.md  TESTING.md
new/docs/HARDWARE/: BK7258_FIRMWARE.md  WowCube_Integration.md
new/docs/PERFORMANCE/: COST_ANALYSIS.md  CPU_LOAD_ANALYSIS.md  CPU_LOAD_COMPLETE_TABLE.md  LATENCY_ANALYSIS.md
scripts/: deploy_backend.sh
